Fix overflowing panorama and enlarge tips button on mobile

--- a/_includes/full_css.css
+++ b/_includes/full_css.css
@@ -240,3 +240,7 @@ h1 {
     font-weight: bold;
     text-align: center;
 }
+
+.panorama {
+    width: 1200px;
+}
